[tool.poetry]
name = "semexploration"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.9"
smart-open = "*"
boto3 = "*"
torch = "~1.11"
pytest = "*"
numpy = "*"
transformers = "*"
sentence-transformers = "*"
pandas="*"
datasets ="*"
#onnxruntime= "*"
mlflow = "^1.25.1"
#onnx = "^1.11.0"
tensorflow = {version = "^2.9.1", optional = true}
PyJWT = "^2.4.0"
jupyter = "^1.0.0"
fasttext = "^0.9.2"
scipy = "^1.8.1"
nmslib = "^2.1.1"
protobuf = [
    { markers = "sys_platform == 'linux'", version = "^3.19.4" },
    { markers = "sys_platform == 'darwin'", url="https://files.pythonhosted.org/packages/c6/1c/f18d97fc479b4fb6f72bbb0e41188575362e3bbd31014cf294ef0fdec8bf/protobuf-3.19.4-py2.py3-none-any.whl" }]
onnxruntime-silicon = "^1.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"